--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
-Revision history for Perl extension Wx::WidgetMaker.
+Revision history for Wx::WidgetMaker.
+
+0.02  Thu Nov 06
+      o  added -id parameter to 'submit'
+      o  allowed 'print' to Add a sizer to another sizer
+      o  removed 'use base qw(Wx::Panel)' (relic of other plans)
 
 0.01  Tue Sep 10 02:17:21 2002
-	- original version; created by h2xs 1.21 with options
-		-XA -n Wx::WidgetMaker
+      o  Original version; created by h2xs 1.21 with options
+         -XA -n Wx::WidgetMaker
 
