Import of SLANNING/Wx-WidgetMaker-0.10 from CPAN.
gitpan-cpan-distribution: Wx-WidgetMaker
gitpan-cpan-version:      0.10
gitpan-cpan-path:         SLANNING/Wx-WidgetMaker-0.10.tar.gz
gitpan-cpan-author:       SLANNING
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,11 +1,16 @@
 Revision history for Wx::WidgetMaker.
 
-0.02  Thu Nov 06
+0.10  Mon Nov 10 2003
+      o  added -id parameter to widgets so that events
+         can be associated with them
+      o  made bitmap suffixes in image_button case-insensitive
+      o  added META.yml file
+
+0.02  Thu Nov 06 2003
       o  added -id parameter to 'submit'
       o  allowed 'print' to Add a sizer to another sizer
       o  removed 'use base qw(Wx::Panel)' (relic of other plans)
 
-0.01  Tue Sep 10 02:17:21 2002
+0.01  Tue Sep 10 2002
       o  Original version; created by h2xs 1.21 with options
          -XA -n Wx::WidgetMaker
-
